@@ -1,5 +1,5 @@
 <div metal:define-macro="portal_footer"
-     i18n:domain="plone">
+     i18n:domain="plone" tal:omit-tag="">
 
     <div id="portal-footer">
         <small>
